--- a/style-expanded.css
+++ b/style-expanded.css
@@ -149,7 +149,7 @@ nav > ul li > a {
   transition: all 0.1s ease;
 }
 nav > ul li > a:hover {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 12px 0px 8px 0px;
 }
 nav > ul li > a.why-join {
@@ -1479,6 +1479,7 @@ span.yo-email {
 }
 .manage-simple-content > h1 {
   font-size: 1.4em;
+  text-decoration: underline;
 }
 .manage-simple-content > h1.edit-h1 {
   margin-bottom: 1em;
@@ -1549,6 +1550,7 @@ a.manage-edit:hover {
       flex-wrap: wrap;
   margin-top: 1em;
   position: relative;
+  width: 98%;
 }
 .weekday-edit-wrap .meeting-details i.far.fa-edit {
   position: absolute;
@@ -1628,15 +1630,48 @@ a.manage-edit:hover {
   padding: 50px;
 }
 
+.errors {
+  padding: 1em;
+  border-radius: 2px;
+  border: 1px solid red;
+  margin-bottom: 0.5em;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: red;
+}
+.errors ul li {
+  list-style: disc;
+  margin-left: 1em;
+}
+
+a.new-mtg-btn {
+  margin: 1em 0;
+  padding: 1em 2em;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.9);
+  border: 1px solid #fff;
+  text-decoration: none;
+  transition: all 0.2s ease;
+}
+a.new-mtg-btn:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
 form#manage-mtg {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 98%;
 }
 form#manage-mtg .top-info {
   width: 100%;
   margin: 0.5em 0;
+}
+form#manage-mtg .align-days {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 form#manage-mtg p.days-held {
   text-decoration: underline;
@@ -1679,7 +1714,8 @@ form#manage-mtg input.mtg-update-url {
   width: 16em;
 }
 form#manage-mtg textarea#meeturl {
-  width: 18em;
+  width: 98%;
+  max-width: 18em;
   height: 6em;
   resize: none;
   border: 0;
@@ -1706,7 +1742,8 @@ form#manage-mtg .update-rt {
       justify-content: flex-end;
   width: 100%;
 }
-form#manage-mtg input[name="update-mtg"] {
+form#manage-mtg input[name="update-mtg"],
+form#manage-mtg input[name="create-mtg"] {
   background-color: rgba(0, 0, 0, 0.9);
   font-family: Tahoma, Calbri, sans-serif;
   color: #fff;
@@ -1717,8 +1754,10 @@ form#manage-mtg input[name="update-mtg"] {
   margin-top: 1.5em;
   transition: all 0.2s ease;
 }
-form#manage-mtg input[name="update-mtg"]:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+form#manage-mtg input[name="update-mtg"]:hover,
+form#manage-mtg input[name="create-mtg"]:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+  color: rgba(0, 0, 0, 0.9);
 }
 form#manage-mtg input:checked + span {
   color: #fff;
@@ -1737,4 +1776,47 @@ form#manage-mtg label {
   cursor: pointer;
   line-height: 1.6em;
   color: gray;
+}
+
+@media screen and (max-width: 800px) {
+  form#manage-mtg {
+    -ms-flex-direction: column;
+        flex-direction: column;
+  }
+
+  .weekday-edit-wrap .meeting-details .details-right {
+    padding: 1em 0em;
+    width: 100%;
+  }
+
+  .weekday-edit-wrap .meeting-details .details-left {
+    border-right: 0px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 1em 0em;
+    width: 100%;
+  }
+
+  form#manage-mtg input.mtg-update, form#manage-mtg input.mtg-update-url {
+    width: 100%;
+  }
+
+  form#manage-mtg input[name="update-mtg"] {
+    width: 98%;
+    padding: 1em 0em;
+    text-align: center;
+    font-size: 0.8em;
+  }
+
+  form#manage-mtg .update-rt {
+    -ms-flex-pack: center;
+        justify-content: center;
+  }
+}
+@media screen and (max-width: 360px) {
+  form#manage-mtg .align-days {
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
