--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -9,15 +9,19 @@
 	flex-wrap: wrap;
 	line-height: 1.5em;
 	padding: 100px 20px;
+	
 }
-.manage-simple-intro {
+.manage-simple {
 	width: 100%;
-	max-width: 620px;
+	max-width: 900px;
 	text-align: justify;
 	margin-bottom: 1em;
 	border-bottom: 1px solid #fff;
 	padding-bottom: 0.5em;
 	position: relative;
+	& > h1 {
+		font-size: 1.4em;
+	}
 	& > p {
 		margin-bottom: 1em;
 	}
@@ -41,18 +45,57 @@
 			}
 		}
 	}
+	&.review {
+		border-bottom: none;
+	}	
+	&.intro {
+		padding: 0px 2em 0.6em;
+	}
+	&.empty {
+		border-bottom: none;
+		& > h1 {
+			margin-bottom: 1em;
+		}
+	}
 }
-.manage-simple-content {
+ul.manage-weekdays {
 	width: 100%;
 	max-width: 900px;
-	& > h1 {
-		font-size: 1.4em;
-		text-decoration: underline;
-	}
 	& > h1.edit-h1 {
 		margin-bottom: 1em;
 	}
-
+	div.manage-day-toggle {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-start;
+		font-weight: normal;
+		font-size: 1.2em;
+		padding-left: 1em;
+	}
+	.day {
+	    font-size: 1.5em;
+	    font-weight: bold;
+	    cursor: pointer;
+	    background-color: inherit;
+	    color: inherit;
+	    border: none;
+	    width: 100%;
+	    padding: 0.2em;
+	    outline: none;
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    align-items: center;
+	    flex: 1;
+	    transition: font-size 0.3s ease, background 0.5s ease;
+	    &:hover {
+			background-color: #fff;
+		    color: #313131;
+		    background: #6d94e1 url(_images/aa-logo-light.gif) no-repeat center center fixed;
+		    background-size: cover;
+		    background-attachment: fixed;    	
+	    }
+	}
 }
 
 .manage-glance-wrap {
@@ -217,7 +260,7 @@
 }
 
 .errors {
-	padding: 1em;
+	padding: 1.5em;
 	border-radius: 2px;
 	border: 1px solid red;
 	margin-bottom: 0.5em;
@@ -249,6 +292,7 @@ form#manage-mtg {
 	display: flex;
 	flex-wrap: wrap;
 	width: 98%;
+	text-align: left;
 	.top-info {
 		width: 100%;
 		margin: 0.5em 0;
@@ -274,7 +318,8 @@ form#manage-mtg {
 	.mtg-days {
 		display: inline-block;
 	}
-	input.fixerror {
+	input.fixerror, 
+	textarea.fixerror {
 		background-color: rgba(255,189,192,1);
 	}
 	input.mtg-time {
@@ -290,7 +335,8 @@ form#manage-mtg {
 		height: 1.3em;
 		// vertical-align: middle;
 	}
-	span.fixerror {
+	span.fixerror,
+	div.fixerror {
 		background-color: rgba(255,189,192,1);
 		padding: 0.5em 1.5em 0.5em 1em;
 		border-radius: 3px;
