--- a/components/sass/style.scss
+++ b/components/sass/style.scss
@@ -1,5 +1,6 @@
 @import "base-setup/eric-meyer-reset";
 @import "base-setup/clearfix";
+@import "base-setup/jq-time";
 
 @import "custom";
 @import "preload";
