--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -202,12 +202,12 @@ footer {
     margin-bottom: 4em;
     font-size: 12px;
     color: #808080;
-    a {
-      color: inherit;
+    a.eb {
       text-decoration: none;
+      color: inherit;
+      transition: color 0.15s ease;
       &:hover {
-        color: #fff;
-        text-decoration: underline;
+        color: rgba(178,178,178,1);
       }
     }
   }
@@ -268,4 +268,5 @@ div#success-wrap {
     }
   }
 }
+
 
