--- a/components/sass/_preload.scss
+++ b/components/sass/_preload.scss
@@ -7,7 +7,8 @@
   left: 100px; 
   top: 0; 
 }
-.preload {
+.preload,
+.preload-manage {
   position: fixed;
   // left: 0px;
   // top: -33px;
@@ -27,7 +28,8 @@
   }
 }
 @media screen and (max-width: 600px) {
-  .preload {
+  .preload,
+  .preload-manage {
     & > p {
       font-size: 2em;
     }
