--- a/style-expanded.css
+++ b/style-expanded.css
@@ -67,6 +67,82 @@ table {
   clear: both;
 }
 
+/**
+ * jQuery Timepicker - v1.3.5 - 2016-07-10
+ * http://timepicker.co
+ *
+ * Enhances standard form input fields helping users to select (or type) times.
+ *
+ * Copyright (c) 2016 Willington Vega; Licensed MIT, GPL
+ */
+.ui-timepicker-container {
+  position: absolute;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.ui-timepicker {
+  box-sizing: content-box;
+  display: block;
+  height: 205px;
+  list-style: none outside none;
+  margin: 0;
+  padding: 0 1px;
+  text-align: center;
+}
+
+.ui-timepicker-viewport {
+  box-sizing: content-box;
+  display: block;
+  height: 205px;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.ui-timepicker-standard {
+  font-family: Verdana,Arial,sans-serif;
+  font-size: 1.1em;
+  background-color: #FFF;
+  border: 1px solid #AAA;
+  color: #222;
+  margin: 0;
+  padding: 2px;
+}
+
+.ui-timepicker-standard a {
+  border: 1px solid transparent;
+  color: #222;
+  display: block;
+  padding: .2em .4em;
+  text-decoration: none;
+}
+
+.ui-timepicker-standard .ui-state-hover {
+  background-color: #DADADA;
+  border: 1px solid #999;
+  font-weight: 400;
+  color: #212121;
+}
+
+.ui-timepicker-standard .ui-menu-item {
+  margin: 0;
+  padding: 0;
+}
+
+.ui-timepicker-corners, .ui-timepicker-corners .ui-corner-all {
+  border-radius: 4px;
+}
+
+.ui-timepicker-hidden {
+  display: none;
+}
+
+.ui-timepicker-no-scrollbar .ui-timepicker {
+  border: 0;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -86,7 +162,8 @@ body {
   top: 0;
 }
 
-.preload {
+.preload,
+.preload-manage {
   position: fixed;
   display: -ms-flexbox;
   display: flex;
@@ -100,14 +177,16 @@ body {
   height: 100vh;
   z-index: 4567891;
 }
-.preload > p {
+.preload > p,
+.preload-manage > p {
   font-family: 'Caveat', cursive;
   font-size: 3em;
   color: #fff;
 }
 
 @media screen and (max-width: 600px) {
-  .preload > p {
+  .preload > p,
+  .preload-manage > p {
     font-size: 2em;
   }
 }
@@ -832,13 +911,13 @@ footer p.copyright {
   font-size: 12px;
   color: #808080;
 }
-footer p.copyright a {
-  color: inherit;
+footer p.copyright a.eb {
   text-decoration: none;
+  color: inherit;
+  transition: color 0.15s ease;
 }
-footer p.copyright a:hover {
-  color: #fff;
-  text-decoration: underline;
+footer p.copyright a.eb:hover {
+  color: #b2b2b2;
 }
 
 div#success-wrap {
@@ -1461,6 +1540,14 @@ span.yo-email {
   padding: 100px 20px;
 }
 
+.confirm {
+  align-text: center;
+  font-size: 3.2em;
+  margin-bottom: 0.3em;
+  font-family: 'Special Elite', cursive;
+  color: #de2c0d;
+}
+
 .manage-simple {
   width: 100%;
   max-width: 900px;
@@ -1589,12 +1676,57 @@ ul.manage-weekdays .day:hover {
   padding: 0 2em;
 }
 
+.manage-glance-wrap-review {
+  width: 100%;
+  max-width: 900px;
+  margin-top: 1em;
+  cursor: default;
+}
+
+.manage-glance-review {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  cursor: default;
+  padding: 0.5em 1em;
+  background-color: transparent;
+  color: inherit;
+  border-top: 2px solid #fff;
+  border-bottom: dashed 1px #7e7e7e;
+  background-color: #000;
+  background-color: #000;
+  color: #fff;
+  background: #6d94e1 url(_images/aa-logo_active.gif) no-repeat center center fixed;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.manage-glance-review:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.manage-glance-review .glance-mtg-time {
+  -ms-flex: 2 1 0;
+      flex: 2 1 0;
+}
+.manage-glance-review .glance-group-title {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+.manage-glance-review .glance-mtg-type {
+  padding: 0em 1.5em 0em 0.5em;
+}
+
 a.manage-edit {
   color: white;
   transition: all 0.2s ease;
+  margin-left: 1em;
 }
 a.manage-edit:hover {
   color: #96ff00;
+}
+
+a.manage-edit.inline {
+  margin-left: 0;
 }
 
 a.manage-delete {
@@ -1683,6 +1815,9 @@ a.manage-delete:hover {
   text-decoration: underline;
   font-weight: bold;
   margin-bottom: 0.5em;
+}
+.weekday-edit-wrap .meeting-details .details-right p.add-info.fixerror {
+  color: #8b8586;
 }
 .weekday-edit-wrap .meeting-details .details-right ul {
   list-style-type: disc;
@@ -1786,11 +1921,11 @@ form#manage-mtg input.fixerror,
 form#manage-mtg textarea.fixerror {
   background-color: #ffbdc0;
 }
-form#manage-mtg input.mtg-time {
+form#manage-mtg input.timepicker {
   font-size: 1.1em;
   border: 0;
   padding: 0.2em;
-  width: 2em;
+  width: 6em;
   margin-bottom: 1em;
   text-align: center;
 }
@@ -1819,7 +1954,7 @@ form#manage-mtg input.mtg-update.group-name {
 form#manage-mtg input.mtg-update-url {
   width: 16em;
 }
-form#manage-mtg textarea#meeturl {
+form#manage-mtg textarea#meet_url {
   width: 98%;
   max-width: 18em;
   height: 6em;
@@ -1830,6 +1965,10 @@ form#manage-mtg textarea#meeturl {
 }
 form#manage-mtg input:checked + span {
   color: #fff;
+}
+form#manage-mtg .fixerror input:checked + span {
+  color: #313131;
+  font-weight: bold;
 }
 form#manage-mtg input[type="checkbox"] {
   width: 1.5em;
