--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -16,7 +16,10 @@
 	font-size: 3.2em;
 	margin-bottom: 0.3em;
 	font-family: 'Special Elite', cursive;
-	color: rgba(222,44,13,1);
+	color: rgba(223,147,39,1);
+	&.warning {
+		color: rgba(222,44,13,1);
+	}
 
 }
 .manage-simple {
@@ -180,6 +183,7 @@ a.manage-edit {
 	color: rgba(255,255,255,1);
 	transition: all 0.2s ease;
 	margin-left: 1em;
+	text-decoration: none;
 	&:hover {
 		color: rgba(150,255,0,1);
 	}
