--- a/style-expanded.css
+++ b/style-expanded.css
@@ -679,7 +679,7 @@ input.day-values {
   color: #fff;
   font-family: inherit;
   width: 100%;
-  max-width: 125px;
+  max-width: 200px;
   font-weight: normal;
   outline: none;
 }
@@ -1591,6 +1591,45 @@ span.yo-email {
 .manage-simple.review {
   border-bottom: none;
 }
+.manage-simple.review a.done {
+  margin: 1em auto;
+  padding: 1em 2em;
+  border: 1px solid #fff;
+  background-color: #40b208;
+  color: #fff;
+  text-decoration: none;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+.manage-simple.review a.done:hover {
+  background-color: rgba(64, 178, 8, 0.4);
+}
+.manage-simple.review input.done {
+  margin: 1em auto;
+  padding: 1em 2em;
+  border: 1px solid #fff;
+  background-color: #40b208;
+  color: #fff;
+  text-decoration: none;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  cursor: pointer;
+  padding: 1em;
+  font-size: 1em;
+}
+.manage-simple.review input.done:hover {
+  background-color: rgba(64, 178, 8, 0.4);
+}
 .manage-simple.intro {
   padding: 0px 2em 0.6em;
 }
@@ -1685,6 +1724,9 @@ ul.manage-weekdays .day:hover {
 .manage-glance .glance-mtg-type {
   padding: 0 2em;
 }
+.manage-glance.draft {
+  background-color: rgba(32, 93, 168, 0.3);
+}
 
 .manage-glance-wrap-review {
   width: 100%;
@@ -1724,6 +1766,33 @@ ul.manage-weekdays .day:hover {
 }
 .manage-glance-review .glance-mtg-type {
   padding: 0em 1.5em 0em 0.5em;
+}
+.manage-glance-review.draft {
+  background: rgba(32, 93, 168, 0.3);
+}
+
+form.new-review {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  padding: 1em;
+}
+form.new-review label {
+  padding: 1em 0.5em;
+  cursor: pointer;
+}
+form.new-review input[type="radio"] {
+  width: 0em;
+  height: 0em;
+}
+form.new-review input:checked + span {
+  color: #fff;
+  font-weight: bold;
+  background-color: #205da8;
+  padding: 0.5em 2em;
+  display: inline-block;
+  border-radius: 3px;
 }
 
 a.manage-edit {
@@ -1940,10 +2009,6 @@ form#manage-mtg input.timepicker {
   margin-bottom: 1em;
   text-align: center;
 }
-form#manage-mtg input[type="radio"] {
-  width: 1.3em;
-  height: 1.3em;
-}
 form#manage-mtg span.fixerror,
 form#manage-mtg div.fixerror {
   background-color: #ffbdc0;
@@ -1999,6 +2064,9 @@ form#manage-mtg label {
   line-height: 1.6em;
   color: gray;
 }
+form#manage-mtg label.vis {
+  color: #fff;
+}
 
 .btm-notes {
   width: 100%;
@@ -2015,22 +2083,43 @@ form#manage-mtg label {
   border-top-left-radius: 0px;
   margin-top: 0.5em;
   resize: none;
+  margin-bottom: 1em;
 }
 .btm-notes .update-rt {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: end;
-      justify-content: flex-end;
+  -ms-flex-pack: space-evenly;
+      justify-content: space-evenly;
   width: 100%;
 }
-.btm-notes .update-rt a.cancel {
-  margin-right: 1em;
+.btm-notes .visible {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  padding: 0.5em 1em;
+}
+.btm-notes .visible label {
+  padding: 1em 0.5em;
+  cursor: pointer;
+}
+.btm-notes .visible input[type="radio"] {
+  width: 0em;
+  height: 0em;
+}
+.btm-notes .visible input:checked + span {
+  color: #fff;
+  font-weight: bold;
+  background-color: #205da8;
+  padding: 0.5em 2em;
+  display: inline-block;
+  border-radius: 3px;
 }
 .btm-notes input[name="update-mtg"],
 .btm-notes input[name="create-mtg"],
 .btm-notes input[name="delete-mtg"],
+.btm-notes input[name="review-mtg"],
 .btm-notes a.cancel {
-  background-color: rgba(0, 0, 0, 0.9);
   font-family: Tahoma, Calbri, sans-serif;
   color: #fff;
   text-decoration: none;
@@ -2038,15 +2127,35 @@ form#manage-mtg label {
   cursor: pointer;
   border: 1px solid #fff;
   padding: 1em 2em;
+  margin: 0 0.5em;
+  -ms-flex: 1;
+      flex: 1;
+  text-align: center;
   margin-top: 1.5em;
   transition: all 0.2s ease;
 }
-.btm-notes input[name="update-mtg"]:hover,
-.btm-notes input[name="create-mtg"]:hover,
-.btm-notes input[name="delete-mtg"]:hover,
+.btm-notes a.cancel {
+  color: #fff;
+  background-color: black;
+}
 .btm-notes a.cancel:hover {
-  background-color: rgba(255, 255, 255, 0.6);
-  color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.btm-notes input[name="review-mtg"] {
+  background-color: #ff9705;
+  margin-left: 0.5em;
+}
+.btm-notes input[name="review-mtg"]:hover {
+  background-color: #ffcd05;
+  color: #fff;
+}
+.btm-notes input[name="update-mtg"] {
+  background-color: #20a820;
+  margin-left: 0.5em;
+}
+.btm-notes input[name="update-mtg"]:hover {
+  background-color: #5dcb5d;
+  color: #fff;
 }
 .btm-notes input[name="delete-mtg"] {
   background-color: #de2c0d;
