--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -32,6 +32,7 @@
 	position: relative;
 	& > h1 {
 		font-size: 1.4em;
+		display: inline-block;
 	}
 	& > p {
 		margin-bottom: 1em;
@@ -105,6 +106,101 @@
 		}
 	}
 }
+.manage-simple-admin {
+	width: 100%;
+	max-width: 900px;
+	text-align: justify;
+	margin-bottom: 1em;
+	border-bottom: 1px solid #fff;
+	padding-bottom: 0.5em;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	& > h1 {
+		font-size: 1.4em;
+		display: inline-block;
+	}
+	& > p {
+		// margin-bottom: 1em;
+	}
+	& > p.admin-email {
+		text-align: right;
+		padding-right: 2em;
+		color: #fff;
+		display: inline-block;
+		& > a {
+			color: #fff;
+			text-decoration: none;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+
+	}
+}
+.manage-simple-email {
+	width: 100%;
+	max-width: 900px;
+	// text-align: justify;
+	margin-bottom: 1em;
+	padding: 1em;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;	
+}
+form.admin-email-form {
+	width: 100%;
+	max-width: 560px;
+	font-size: 1em;
+	line-height: 1.5em;
+	label {
+		display: block;
+	}
+	input[type="text"] {
+		font-size: 1.1em;
+	    border: 0;
+	    padding: 0.2em;
+	    width: 96%;
+	    max-width: 20em;
+	    margin-bottom: 1em;
+	    display: block;
+	}
+	textarea {
+		width: 96%;
+		max-width: 28em;
+		height: 10em;
+		padding: 0.2em;
+		font-size: 1.1em;
+		margin-bottom: 0.5em;
+	}
+	& > .update-rt {
+		display: flex;
+		justify-content: flex-end;
+		width: 96%;
+		& > a.cancel,
+		& > input[type="submit"] {
+			padding: 1em;
+			background-color: rgba(0,0,0,1);
+			text-decoration: none;
+			color: #fff;
+			border: 1px solid #fff;
+			cursor: pointer;
+			font-size: 1em;
+			flex: 1;
+			text-align: center;
+			transition: all 0.2s ease; 
+			&:hover {
+				background-color: rgba(255,255,255,0.2);
+			}
+		}
+		& > a.cancel {
+			margin-right: 1em;
+		}
+	}
+}
+
 @media screen and (max-width: 500px) {
 	.manage-simple {
 		&.intro {
