Launched to live site around 1600 04.28.20

--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -644,7 +644,7 @@ form#manage-mtg {
 		display: flex;
 		flex-direction: column;
 		padding: 0.5em 1em;
-
+		border: 1px solid rgba(255,255,255,0.6);
 
 	label {
 		padding: 1em 0.5em;
